--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,12 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [              
+            "styles": [
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/nova-light/theme.css",
               "./node_modules/primeflex/primeflex.css",
               "./node_modules/primeng/resources/primeng.min.css",
-              "./node_modules/@fortawesome/fontawesome-free/css/all.css",              
+              "./node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/styles.css"
             ],
             "scripts": [
@@ -137,5 +137,8 @@
       }
     }
   },
-  "defaultProject": "Ng-Prime"
+  "defaultProject": "Ng-Prime",
+  "cli": {
+    "analytics": false
+  }
 }
